# Tropopause

./: License  README.md  setup.cfg
tests/: test_tropo_calc.py  test_tropo_io.py
tropopause/: cli.py  tropo_calc.py  tropo_figure.py  tropo_io.py
tropopause/data/: METOP-A_GPS_2020-01-01_OPSv5.6.2_UCAR-2016.0120_L2.nc
